--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,17 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <div id='cabecalho'>
+        <br><p></p>MENU </p>
+        <P></P>- pode ter links, imagens, textos</p>
+        </div>
+        <div id="principal>
+            <br><p>PAGINA PRINCIPAL - pode ter links, imagens, textos </p>
+        </div>
+        <div id="rodape">
+            <br><p></p>RODAPE - alguma notaçao </p>
+            </div>
+    </body>bory>
+
 </body>
 </html>>
