--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
         <div id="rodape">
             <br><p></p>RODAPE - alguma notaçao </p>
             </div>
-    </body>bory>
+    </body>
 
 </body>
 </html>>
